--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "babel-preset-stage-0": "^6.22.0",
     "body-parser": "^1.17.1",
     "cors": "^2.8.3",
+    "es6-promise": "^4.1.0",
     "express": "^4.15.2",
+    "isomorphic-fetch": "^2.2.1",
     "nodemon": "^1.11.0",
     "path": "^0.12.7",
     "react": "^15.5.4",
@@ -30,7 +32,9 @@
     "react-dropzone-component": "^2.0.0",
     "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
+    "redux-logger": "^3.0.1",
     "redux-thunk": "^2.2.0",
     "semantic-ui-react": "^0.68.3",
     "webpack": "^2.5.1",
