--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "babel-preset-stage-0": "^6.22.0",
     "body-parser": "^1.17.1",
     "cors": "^2.8.3",
+    "css-loader": "^0.28.1",
     "es6-promise": "^4.1.0",
     "express": "^4.15.2",
+    "file-loader": "^0.11.1",
     "isomorphic-fetch": "^2.2.1",
+    "node-sass": "^4.5.2",
     "nodemon": "^1.11.0",
     "path": "^0.12.7",
     "react": "^15.5.4",
@@ -36,7 +39,11 @@
     "redux": "^3.6.0",
     "redux-logger": "^3.0.1",
     "redux-thunk": "^2.2.0",
+    "sass-loader": "^6.0.5",
+    "semantic-ui-css": "^2.2.10",
     "semantic-ui-react": "^0.68.3",
+    "style-loader": "^0.17.0",
+    "url-loader": "^0.5.8",
     "webpack": "^2.5.1",
     "webpack-dev-server": "^2.4.5"
   }
