--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "devDependencies": {},
   "dependencies": {
+    "antd": "^2.10.1",
     "axios": "^0.16.1",
     "babel-cli": "^6.24.0",
     "babel-core": "^6.24.1",
@@ -27,6 +28,7 @@
     "express": "^4.15.2",
     "file-loader": "^0.11.1",
     "isomorphic-fetch": "^2.2.1",
+    "multer": "^1.3.0",
     "node-sass": "^4.5.2",
     "nodemon": "^1.11.0",
     "path": "^0.12.7",
