--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "author": "",
   "license": "MIT",
-  "devDependencies": {},
+  "devDependencies": {
+    "extract-text-webpack-plugin": "^2.1.0"
+  },
   "dependencies": {
     "antd": "^2.10.1",
     "axios": "^0.16.1",
@@ -29,9 +31,10 @@
     "file-loader": "^0.11.1",
     "isomorphic-fetch": "^2.2.1",
     "multer": "^1.3.0",
-    "node-sass": "^4.5.2",
+    "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
     "path": "^0.12.7",
+    "radium": "^0.18.3",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-dropzone-component": "^2.0.0",
