--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "es6-promise": "^4.1.0",
     "express": "^4.15.2",
     "file-loader": "^0.11.1",
+    "identicon": "^2.1.1",
     "isomorphic-fetch": "^2.2.1",
+    "jdenticon": "^1.4.0",
     "multer": "^1.3.0",
     "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
