router, server-side redirect, style update

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "board",
   "main": "server.js",
   "scripts": {
-    "dev": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "dev": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --content-base public --history-api-fallback ",
     "build": "webpack",
     "start": "babel-node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
