--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "identicon": "^2.1.1",
     "isomorphic-fetch": "^2.2.1",
     "jdenticon": "^1.4.0",
+    "mongodb": "^2.2.27",
     "multer": "^1.3.0",
     "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
