--- a/package.json
+++ b/package.json
@@ -24,17 +24,23 @@
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.22.0",
+    "bcrypt": "^1.0.2",
+    "bcrypt-promised": "^1.0.1",
+    "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
     "cors": "^2.8.3",
     "css-loader": "^0.28.1",
     "es6-promise": "^4.1.0",
     "express": "^4.15.2",
+    "express-session": "^1.15.3",
     "file-loader": "^0.11.1",
     "identicon": "^2.1.1",
     "isomorphic-fetch": "^2.2.1",
     "jdenticon": "^1.4.0",
+    "limax": "^1.5.0",
     "mongodb": "^2.2.27",
     "mongoose": "^4.10.2",
+    "morgan": "^1.8.2",
     "multer": "^1.3.0",
     "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
