--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "extract-text-webpack-plugin": "^2.1.0"
   },
   "dependencies": {
-    "antd": "^2.10.1",
     "axios": "^0.16.1",
     "babel-cli": "^6.24.0",
     "babel-core": "^6.24.1",
@@ -25,7 +24,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.22.0",
     "bcrypt": "^1.0.2",
-    "bcrypt-promised": "^1.0.1",
+    "bcrypt-as-promised": "^1.1.0",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
     "cors": "^2.8.3",
@@ -34,18 +33,17 @@
     "express": "^4.15.2",
     "express-session": "^1.15.3",
     "file-loader": "^0.11.1",
-    "identicon": "^2.1.1",
     "isomorphic-fetch": "^2.2.1",
-    "jdenticon": "^1.4.0",
+    "jsonwebtoken": "^7.4.1",
     "limax": "^1.5.0",
     "mongodb": "^2.2.27",
+    "mongodb-autoincrement": "^1.0.1",
     "mongoose": "^4.10.2",
     "morgan": "^1.8.2",
     "multer": "^1.3.0",
     "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
     "path": "^0.12.7",
-    "radium": "^0.18.3",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-dropzone-component": "^2.0.0",
