--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bcrypt-as-promised": "^1.1.0",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
+    "cool-ascii-faces": "1.3.4",
     "cors": "^2.8.3",
     "css-loader": "^0.28.1",
     "es6-promise": "^4.1.0",
