--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "devDependencies": {
     "extract-text-webpack-plugin": "^2.1.0"
   },
+  "engines": {
+    "node": "6.10.3"
+  },
   "dependencies": {
     "axios": "^0.16.1",
     "babel-cli": "^6.24.0",
