--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "extract-text-webpack-plugin": "^2.1.0"
+    "extract-text-webpack-plugin": "^2.1.0",
+    "postcss-loader": "^2.0.5"
   },
   "engines": {
     "node": "6.10.3"
@@ -48,12 +49,17 @@
     "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
     "path": "^0.12.7",
+    "postcss": "^6.0.1",
+    "postcss-cssnext": "^2.11.0",
+    "postcss-import": "^10.0.0",
     "react": "^15.5.4",
+    "react-css-themr": "^2.1.2",
     "react-dom": "^15.5.4",
     "react-dropzone-component": "^2.0.0",
     "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
+    "react-toolbox": "^2.0.0-beta.12",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.1",
