--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "react-toolbox": "^2.0.0-beta.12",
+    "react-youtube": "^7.4.0",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.1",
