--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-css-themr": "^2.1.2",
     "react-dom": "^15.5.4",
     "react-dropzone-component": "^2.0.0",
+    "react-player": "^0.18.0",
     "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
