--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "file-loader": "^0.11.1",
     "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "^7.4.1",
+    "jwt-decode": "^2.2.0",
     "limax": "^1.5.0",
     "mongodb": "^2.2.27",
     "mongodb-autoincrement": "^1.0.1",
