--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "babel-plugin-import": "^1.2.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "postcss-loader": "^2.0.5"
   },
@@ -21,7 +20,6 @@
     "node": "7.9.0"
   },
   "dependencies": {
-    "antd": "^2.11.0",
     "axios": "^0.16.1",
     "babel-cli": "^6.24.0",
     "babel-core": "^6.24.1",
@@ -33,7 +31,6 @@
     "bcrypt-as-promised": "^1.1.0",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
-    "cool-ascii-faces": "1.3.4",
     "cors": "^2.8.3",
     "css-loader": "^0.28.1",
     "es6-promise": "^4.1.0",
@@ -43,12 +40,10 @@
     "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "^7.4.1",
     "jwt-decode": "^2.2.0",
-    "limax": "^1.5.0",
     "mongodb": "^2.2.27",
     "mongodb-autoincrement": "^1.0.1",
     "mongoose": "^4.10.2",
     "morgan": "^1.8.2",
-    "multer": "^1.3.0",
     "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
     "path": "^0.12.7",
@@ -60,13 +55,13 @@
     "react": "^15.5.4",
     "react-css-themr": "^2.1.2",
     "react-dom": "^15.5.4",
-    "react-dropzone-component": "^2.0.0",
+    "react-infinite": "^0.11.0",
+    "react-infinite-scroller": "^1.0.12",
     "react-player": "^0.18.0",
     "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "react-toolbox": "^2.0.0-beta.12",
-    "react-youtube": "^7.4.0",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.1",
