--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-dom": "^15.5.4",
     "react-infinite": "^0.11.0",
     "react-infinite-scroller": "^1.0.12",
+    "react-paginate": "^4.4.2",
     "react-player": "^0.18.0",
     "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
