--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express": "^4.15.2",
     "express-session": "^1.15.3",
     "file-loader": "^0.11.1",
+    "immutability-helper": "^2.2.2",
     "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "^7.4.1",
     "jwt-decode": "^2.2.0",
