--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express-session": "^1.15.3",
     "file-loader": "^0.11.1",
     "immutability-helper": "^2.2.2",
+    "install": "^0.10.1",
     "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "^7.4.1",
     "jwt-decode": "^2.2.0",
@@ -47,6 +48,7 @@
     "morgan": "^1.8.2",
     "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
+    "npm": "^5.0.3",
     "path": "^0.12.7",
     "postcss": "^6.0.1",
     "postcss-cssnext": "^2.11.0",
